fix auth requests, graceful shutdown
