# Gateway/internal/handler/auth.go
@@ -3,6 +3,9 @@ package handler
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/sirupsen/logrus"
+	"gitlab.com/bobr-lord-messenger/gateway/internal/errors"
+	"gitlab.com/bobr-lord-messenger/gateway/internal/models"
+	"net/http"
 )
 
 // Register godoc
@@ -11,12 +14,23 @@ import (
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        input  body  models.RegisterInput  true  "Данные регистрации"
-// @Success      200  {object}  models.RegisterOutput
+// @Param        input  body  models.RegisterRequest  true  "Данные регистрации"
+// @Success      200  {object}  models.RegisterResponse
 // @Router       /auth/register [post]
 func (h *Handler) Register(c *gin.Context) {
 	logrus.Info("register handler")
-	c.Status(200)
+	var req models.RegisterRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	res, err := h.service.Auth.Register(&req)
+	if err != nil {
+		code, err := errors.ParseCustomError(err)
+		c.JSON(code, gin.H{"error": err})
+		return
+	}
+	c.JSON(http.StatusOK, res)
 }
 
 // Login godoc
@@ -26,8 +40,8 @@ func (h *Handler) Register(c *gin.Context) {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        input  body  models.LoginInput  true  "Данные регистрации"
-// @Success      200  {object}  models.LoginOutput
+// @Param        input  body  models.LoginRequest  true  "Данные регистрации"
+// @Success      200  {object}  models.LoginResponse
 // @Router       /auth/login [post]
 func (h *Handler) Login(c *gin.Context) {
 	c.Status(200)
